--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 .header-img {
     width: 185px;
     height: 50px;
-    background: url(/assets/images/ozgur.png);
+    background: url(https://oentegrasyon.github.io/linux-quiz/assets/images/ozgur.png);
     background-size: cover;
     background-position:center;
     margin-left: auto;
